# dioxus-template

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  aaaa.html  input.css  package-lock.json
assets/: main.css  tailwind.css
src/: app.rs  lib.rs  main.rs
src/components/cards/: link_card.rs  mod.rs  tech_stack_card.rs  tech_stack_description.rs  total_card.rs  total_data_card.rs
src/constants/: mod.rs  months.rs  tech_stack_data.rs
src/types/: constants_types.rs  github_types.rs  mod.rs  running_response_types.rs
src/utils/: chart_percentage.rs  fetch_api.rs  github_data.rs  mod.rs  number.rs  times.rs  window_data.rs
