[package]
name = "dioxus-vercel"
version = "0.1.0"
authors = ["JFKongphop <kongphopleo@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
dioxus = { version = "0.6.0", features = [] }
dioxus-charts = "0.3.1"
dioxus-free-icons = { version = "0.9", features = ["font-awesome-brands", "font-awesome-solid"] }
dioxus-tailwindcss = "0.8.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
